SOC-1788 | Discussions categories edit - fix header on editor on mobile

--- a/front/main/app/styles/state/_no-scroll.scss
+++ b/front/main/app/styles/state/_no-scroll.scss
@@ -2,10 +2,3 @@
 	height: 100%;
 	overflow: hidden;
 }
-
-@media #{$mobile-range} {
-	.mobile-no-scroll {
-		height: 100%;
-		overflow: hidden;
-	}
-}
